# AIC25

./: .gitignore  README.md  create_embeddings.py  data.json  data_embedding_pipeline.ipynb  docker-compose.yml  filter_json.py  ocr_data.jsonl  pyproject.toml  requirements.txt  test_cuda.py  vector_data.pkl
app/: main.py  request_timer.py
app/controller/: query_controller.py
app/core/: dependencies.py  lifespan.py  logger.py  settings.py  translation.py
app/factory/: factory.py
app/repository/: milvus.py
app/router/: keyframe_api.py
app/schema/: request.py  response.py
app/service/: model_service.py  search_service.py  temporal_search_service.py
app/test/: test_translation.py
gui/: main.py  ui.py
migration/: embedding_migration.py  ocr_migration.py
