[project]
name = "hcmai2025-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "beanie>=2.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "motor>=3.7.1",
    "nicegui>=2.22.2",
    "numpy>=2.2.6",
    "open-clip-torch>=3.1.0",
    "pydantic-settings>=2.10.1",
    "pymilvus>=2.6.0",
    "streamlit>=1.48.0",
    "torch>=2.8.0",
    "typing-extensions>=4.14.1",
    "usearch>=2.19.3",
    "uvicorn>=0.35.0",
]
